[project]
name = "matchtomap"
version = "0.0.1"
authors = [
  { name="saasghari", email="saasghari@gmail.com" },
]
description = "This package is used to change the data format of the trajectory dataset."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/saasghari"
Issues = "https://github.com/saasghari/matchtomap"